# mousetracker

./: .gitignore  LICENSE  README.md  pyproject.toml
Info/: setup_info.txt
metrics_tom/: CLMT V19 WOD.py  CLMT V19.py  assia_tracking_1.py  assia_tracking_1_with_video.py  assia_traj.csv  functions.py  old_tracking.py  old_traj.csv  playground.ipynb
notebooks/: mousetracker_notebook.ipynb
src/: angle.py  main_sophie.py  main_thomas.py  metrics.py  run_analyse_videos.py  run_tracking.py  track_algorithms.py  utils.py
src/mousetracker/: __init__.py  _mousetracker.py
src/mousetracker/_tests/: test__mousetracker.py
