[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
authors = [
    { name = "Tom Orjollet", email = "tom.orjollet--lacomme@etu.univ-amu.fr"},
]
maintainers = [
    {name = "Tom Orjollet", email = "tom.orjollet--lacomme@etu.univ-amu.fr"}
]
name = "mousetracker"
description = "Closed-loop MouseTracker: Live tracking of mouse behaviour"
version = "0.1.0"
license = { file = "LICENSE" }
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy", 
    "jupyter", 
]

[project.urls]
"Bug Tracker" = "https://github.com/CENTURI-Hackathon-2025/mousetracker/issues"
Documentation = "https://github.com/CENTURI-Hackathon-2025/mousetracker#README.md"
"Source Code" = "https://github.com/CENTURI-Hackathon-2025/mousetracker"
"User Support" = "https://github.com/CENTURI-Hackathon-2025/mousetracker/issues"


[project.scripts]
"mousetracker" = "mousetracker:run_app"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "ruff",
    "bumpver",
    "pytest",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/_mousetracker/__init__.py" = [
    '__version__ = "{version}"',
]